# database

./: pyproject.toml
sqlite_tutorial/: README.md  chinook.db  create.py  create_index.py  create_table.py  data.py  delete_data.py  manipulation_data.py  manupilation_data.py  my_database.db  select.py  select_data.py  uppgrate_data.py
sqlite_tutorial/added_index_form/: creare_index.txt
sqlite_tutorial/desctiption_form/create_form/: cteate_table_users.txt
sqlite_tutorial/desctiption_form/select_form/: avg.txt
sqlite_tutorial/practical_part/: connect.py  create_table.drawio  create_table.py  delete_table.py  fill_tables.py  form_create_table.sql  forms_iclude.py  my_database.db  practice_select.py  selected_data.py  сheck_table.py
sqlite_tytiroal/: create.py  data.py  manipulation_data.py  select_data.py
сrv/: generate_phone.py
