[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["dima cheban <dimacheban23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^33.0.0"
phonenumbers = "^8.13.50"
phone-number-generator = "^0.1.1"
phone-gen = "^3.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
